comment out cors config bean